--- a/main.css
+++ b/main.css
@@ -20,4 +20,29 @@ body {
 canvas {
     width: 100%;
     height: 100%;
+    z-index: 1;
+    position: absolute;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+p{
+    text-align: center;
+    font-size: 10rem;
+    color: yellow;
+    z-index: 2;
+    position: relative;
+    font-weight: 600;
+    text-transform: uppercase;
+
+
+    text-shadow: -10px 0px red, 0px 1px red, 1px 0px red, 0px -1px red;
+    cursor: pointer;
 }
