--- a/main.css
+++ b/main.css
@@ -31,18 +31,30 @@ canvas {
     width: 100%;
     height: 100%;
     position: absolute;
+    flex-direction: column;
 }
 
 p{
     text-align: center;
-    font-size: 10rem;
+    padding:0 1em 0 1em;
+    font-size: 8vw;
     color: yellow;
     z-index: 2;
     position: relative;
     font-weight: 600;
     text-transform: uppercase;
-
-
     text-shadow: -10px 0px red, 0px 1px red, 1px 0px red, 0px -1px red;
     cursor: pointer;
+}
+
+span{
+    text-align: center;
+    font-size: 2vw;
+    color: yellow;
+    z-index: 2;
+    font-weight: 600;
+    text-transform: uppercase;
+    position: relative;
+    text-shadow: -3px 0px red, 0px 1px red, 1px 0px red, 0px -1px red;
+
 }
